--- a/apigateway/templates/dashboard.html
+++ b/apigateway/templates/dashboard.html
@@ -10,7 +10,9 @@
 
 <body>
     <h1>Hello you are logged in.</h1>
-    <a href="{{url_for('logout')}}">Press here to logout</a>
+    <a href="{{url_for('logout')}}">Press here to logout</a><br>
+    <a href="{{url_for('product')}}">product</a>
+
 </body>
 
 </html>
