--- a/apigateway/templates/product.html
+++ b/apigateway/templates/product.html
@@ -3,9 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Product Page</title>
+    <link rel="stylesheet" href="../static/product.css" />
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+
+        header {
+            width: 100%;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .product {
+            border: 1px solid #ccc;
+            margin: 10px;
+            text-align: center;
+            max-width: 250px;
+            flex: 1 0 200px;
+            overflow: hidden;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
-    <h1>HELLO</h1>
+
+    <header>
+        <h1>All Products</h1>
+    </header>
+
+    <div class="product">
+        <img src="../static/banana.jpg" alt="Product 1">
+        <h2>Banana</h2>
+        <p>Price: $20.00</p>
+    </div>
+
+    <div class="product">
+        <img src="../static/dua.jpg" alt="Product 2">
+        <h2>Watermelon</h2>
+        <p>Price: $25.00</p>
+    </div>
+
+    <div class="product">
+        <img src="../static/butter.jpg" alt="Product 3">
+        <h2>Avocado</h2>
+        <p>Price: $30.00</p>
+    </div>
+
+    <!-- Thêm các sản phẩm khác nếu cần -->
+
 </body>
 </html>
