--- a/Netsec-khaddas/apigateway/templates/edit.html
+++ b/Netsec-khaddas/apigateway/templates/edit.html
@@ -1,50 +1,94 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>{% block title %}{% endblock %}</title>
-	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-	<meta http-equiv="Pragma" content="no-cache" />
-	<meta http-equiv="Expires" content="0" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
-	<script type="text/javascript" src="../static/index.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-	<div class="container" id="topdiv5">
-		<h5 class="card-title">Edit your Product</h5>
-		<form action="{{ url_for('edit', pro_id = result.pro_id) }}" method="POST">
-			<div class="form-group">
-	    		<label for="exampleFormControlTextarea1">Category</label>
-	    		<textarea class="form-control" id="exampleFormControlTextarea1" rows="1"name="category" required>{{result.category}}</textarea>
-	  		</div>
-	  		<div class="form-group">
-	    		<label for="exampleFormControlTextarea1">Name</label>
-	    		<textarea class="form-control" id="exampleFormControlTextarea1" rows="1" name="pro_name" required>{{result.name}}</textarea>
-	  		</div>
-	  		<div class="form-group">
-	    		<label for="exampleFormControlTextarea1">Description</label>
-	    		<textarea class="form-control" id="exampleFormControlTextarea1" rows="1" name="description" required>{{result.description}}</textarea>
-	  		</div>
-			<div class="form-group">
-				<label for="exampleFormControlSelect1">Price Range</label>
-	    		<select class="form-control" name="price_range">
-	      			<option value="$100-$500">$100-$500</option>
-				    <option value="$500-$1000">$500-$1000</option>
-				    <option value="$1000-$2000">$1000-$2000</option>
-				    <option value="$2000-$5000">$2000-$5000</option>
-				    <option value="$5000-$10000">$5000-$10000</option>
-	    		</select>
-	  		</div>
-	  		<div class="form-group">
-	    		<label for="exampleFormControlTextarea1">Comments</label>
-	    		<textarea class="form-control" id="exampleFormControlTextarea1" rows="1" name="comments" required>{{result.comments}}</textarea>
-	  		</div>
-	  		<button type="submit" class="btn btn-primary">Done</button>
-		</form>
-	</div>
-
-
-
-</body>
+  <head>
+    <title>{% block title %}{% endblock %}</title>
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='styles.css') }}"
+    />
+    <script type="text/javascript" src="../static/index.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <div class="container" id="topdiv5">
+      <h5 class="card-title">Edit your Product</h5>
+      <form
+        action="{{ url_for('edit', pro_id = result.pro_id) }}"
+        method="POST"
+      >
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Category</label>
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="1"
+            name="category"
+            required
+          >
+{{result.category}}</textarea
+          >
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Name</label>
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="1"
+            name="pro_name"
+            required
+          >
+{{result.name}}</textarea
+          >
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Description</label>
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="1"
+            name="description"
+            required
+          >
+{{result.description}}</textarea
+          >
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlSelect1">Price Range</label>
+          <select class="form-control" name="price_range">
+            <option value="$100-$500">$100-$500</option>
+            <option value="$500-$1000">$500-$1000</option>
+            <option value="$1000-$2000">$1000-$2000</option>
+            <option value="$2000-$5000">$2000-$5000</option>
+            <option value="$5000-$10000">$5000-$10000</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Comments</label>
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="1"
+            name="comments"
+            required
+          >
+{{result.comments}}</textarea
+          >
+        </div>
+        <button type="submit" class="btn btn-primary">Done</button>
+      </form>
+    </div>
+  </body>
 </html>
