--- a/Netsec-khaddas/apigateway/templates/index.html
+++ b/Netsec-khaddas/apigateway/templates/index.html
@@ -1,47 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
-</head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='styles.css') }}"
+    />
+    <script
+      type="text/javascript"
+      src="{{ url_for('static', filename='index.js') }}"
+    ></script>
+  </head>
 
-<body>
+  <body>
     <div class="container" id="topdiv6">
-        <nav class="navbar navbar-light bg-light">
-            <span class="navbar-brand mb-0 h1">Products</span>
-            <a class="my-2 my-sm-0" href="{{ url_for('add_product') }}">Do you want to edit?</a>
-            <a class="my-2 my-sm-0" href="{{ url_for('logout') }}">Log out</a>
-        </nav>
-        {% block body %}
-        <div class="product" id="index0">
-            {% if products %}
-                {% for product in products %}
-                    <div class="card needspace" style="width: 18rem;">
-                        <img src="{{ url_for('static', filename='images/' + product['filename']) }}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ product['name'] }}</h5>
-                            <p class="card-text">{{ product['category'] }}</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">{{ product['description'] }}</li>
-                            <li class="list-group-item">Price Range: {{ product['price_range'] }}</li>
-                            <li class="list-group-item">{{ product['comments'] }}</li>
-                        </ul>
-                    </div>
-                {% endfor %}
-            {% endif %}
+      <nav class="navbar navbar-light bg-light">
+        <span class="navbar-brand mb-0 h1">Products</span>
+        <a class="my-2 my-sm-0" href="{{ url_for('add_product') }}"
+          >Do you want to edit?</a
+        >
+        <a class="my-2 my-sm-0" href="{{ url_for('logout') }}">Log out</a>
+      </nav>
+      {% block body %}
+      <div class="product" id="index0">
+        {% if products %} {% for product in products %}
+        <div class="card needspace" style="width: 18rem">
+          <img
+            src="{{ url_for('static', filename='images/' + product['filename']) }}"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">{{ product['name'] }}</h5>
+            <p class="card-text">{{ product['category'] }}</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">{{ product['description'] }}</li>
+            <li class="list-group-item">
+              Price Range: {{ product['price_range'] }}
+            </li>
+            <li class="list-group-item">{{ product['comments'] }}</li>
+          </ul>
         </div>
-        {% endblock %}
+        {% endfor %} {% endif %}
+      </div>
+      {% endblock %}
     </div>
-</body>
-
+  </body>
 </html>
