--- a/apigateway/static/home.css
+++ b/apigateway/static/home.css
@@ -11,7 +11,7 @@ body {
 a:link,
 a:visited {
   background-color: #c0c0c0;
-  color: white;
+  color: black;
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
